force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Session notes and observations</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>