force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Primary_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Primary_Pattern__c</fullName>
    <label>Primary Pattern</label>
    <description>Primary imposter syndrome pattern detected</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount Success</fullName>
            </value>
            <value>
                <fullName>Fear of Exposure</fullName>
            </value>
            <value>
                <fullName>Attribute to Luck</fullName>
            </value>
            <value>
                <fullName>Minimize Accomplishments</fullName>
            </value>
            <value>
                <fullName>Feel Undeserving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>