force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Reframe_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Reframe_Suggestion__c</fullName>
    <label>Reframe Suggestion</label>
    <description>AI-generated suggestion for reframing the imposter thought</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>