force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <description>Type of therapy or intervention session</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imposter Syndrome</fullName>
                <default>true</default>
                <label>Imposter Syndrome</label>
            </value>
            <value>
                <fullName>CBT</fullName>
            </value>
            <value>
                <fullName>DBT</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>Mindfulness</fullName>
            </value>
            <value>
                <fullName>Grounding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>