force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Severity_Score__c.field-meta.xml
<CustomField>
    <fullName>Severity_Score__c</fullName>
    <label>Severity Score</label>
    <description>Severity score from 1-10</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>